--- a/src/pages/Community/Comm.module.css
+++ b/src/pages/Community/Comm.module.css
@@ -127,13 +127,12 @@
     text-align: center;
 }
 
-.CommList_right_main{
+/* .CommList_right_main{
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
     align-items: left;
     padding: 0 0 0 15px;
-    margin : 0 auto 0 0px;
+    margin : 20px auto 0 0px;
     width: 100%;
     height: 340px;
     border-radius: 25px;
@@ -145,23 +144,50 @@
 .CommList_main{
     height: 80%;
     display: flex;
+    align-items: flex-start;
     flex-direction: column;
     margin : 0;
     padding: 0;
     width: 100%;
+} */
+
+.CommList_right_main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0 0 0 15px;
+    margin: 20px auto 0 0px;
+    width: 100%;
+    height: 340px; 
+    border-radius: 25px;
+    border: 1px solid #84a67f;
+    overflow-y: auto;
+    overflow-x: hidden;
+    box-sizing: border-box; 
+}
+
+.CommList_main {
+    width: 100%;
+    padding: 10px 0; 
+    margin: 0; 
+    box-sizing: border-box; 
 }
 
 .CommList_main_bottom{
     display: flex;
     flex-direction: row;
     width: 100%;
+    height: 40px;
     justify-content: space-between;
+    margin : 0;
+    padding: 0;
 }
 
 .main_h3 {
     margin : 10px 0 10px 0 ;
     font-size: 18px;
     font-weight: bold;
+    padding: 0;
 }
 
 .main_bottom{
@@ -183,7 +209,6 @@
     background-color: #d9d9d9;
     width: 1px;
     height: 11px; 
-    /* border: 1px solid #d9d9d9; */
     margin : 0 10px;
 }
 
@@ -379,6 +404,17 @@
     align-items: center;
     font-size: 10px;
     margin-top: -30px;
+    margin-bottom: 15px;
+}
+
+.view_nick2{
+    display: flex;
+    flex-direction: row;
+    padding: 10px 0;
+    align-items: center;
+    font-size: 10px;
+    margin-top: 30px;
+    margin-bottom: 15px;
 }
 
 /* 이미지 */
@@ -386,6 +422,7 @@
     width: 20px;
     height: 20px;
     margin-right: 3px;
+    margin-top: -20px;
 }
 
 /* 닉넴 */
@@ -419,7 +456,7 @@
     height:41px;
     width:156px;
     border-radius:30px;
-    margin: 20px 0 45px 0;
+    margin: 30px 0 30px 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -438,7 +475,7 @@
     justify-content: space-between;
     width: 740px;
     height: 60px;
-    margin-bottom: 45px;
+    margin-bottom: 100px;
 }
 
 /* 댓글 입력 */
@@ -467,15 +504,14 @@
     display: flex;
     flex-direction: column;
     width: 720px;
-    margin: 0 20px 0 20px;
+    margin: 0px 20px 30px 20px;
 }
 
 /* 압정 아이콘 */
 .view_show_icon{
     width: 25px;
     height: 25px;
-    margin-bottom: 5px;
-    margin-left: -10px;
+    margin-bottom: -30px;
 }
 
 /* 프사 */
@@ -483,6 +519,7 @@
     width: 25px;
     height: 25px;
     margin-right: 5px;
+    margin-top: -20px;
 }
 
 /* 전문가 닉 */
@@ -508,4 +545,13 @@
     font-size: 15px;
     font-weight: blod;
     margin-right: 10px;
+}
+
+.No_postList{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-weight: bold;
+    margin : auto;
 }
