--- a/src/pages/manager/Manager.module.css
+++ b/src/pages/manager/Manager.module.css
@@ -38,7 +38,8 @@
     margin-left: 10px;
 }
 
-.stateBox button {
+.acceptbut {
+    background-color: #d9d9d9;
     border: none;
     width: 50px;
     height: 30px;
@@ -46,14 +47,28 @@
     background-color: #84a67f;
     color: white;
     text-align: center;
+    margin-right: 20px;
 }
 
-.acceptbut {
+.complite{
     background-color: #d9d9d9;
+    border: none;
+    width: 50px;
+    height: 30px;
+    border-radius: 15px;
+    color: white;
+    text-align: center;
 }
 
 .rejectbut {
     background-color: #ffd000;
+    border: none;
+    width: 50px;
+    height: 30px;
+    border-radius: 15px;
+    color: white;
+    text-align: center;
+    margin-right: 10px;
 }
 
 .stateText {
