--- a/src/pages/selftest/anxiety/Anxiety.module.css
+++ b/src/pages/selftest/anxiety/Anxiety.module.css
@@ -303,19 +303,51 @@
     font-weight: bold;
 }
 
-.resultScoreLine{
+.resultScoreLine1{
     display: inline-block;
     background-color: black;
     height: 2px; /* 줄의 두께 */
-    width: 70vh; /* 줄의 길이 */
+    width: 100px; /* 줄의 길이 */
     margin-top: 70px;
 }
 
-.resultScoreLine img{
+.resultScoreLine2{
+    display: inline-block;
+    background-color: black;
+    height: 2px; /* 줄의 두께 */
+    width: 35vh; /* 줄의 길이 */
+    margin-top: 70px;
+}
+
+.resultScoreLine3{
+    display: inline-block;
+    background-color: black;
+    height: 2px; /* 줄의 두께 */
+    width: 60vh; /* 줄의 길이 */
+    margin-top: 70px;
+}
+
+.resultScoreLine4{
+    display: inline-block;
+    background-color: black;
+    height: 2px; /* 줄의 두께 */
+    width: 85vh; /* 줄의 길이 */
+    margin-top: 70px;
+}
+
+.resultScoreLine5{
+    display: inline-block;
+    background-color: black;
+    height: 2px; /* 줄의 두께 */
+    width: 95vh; /* 줄의 길이 */
+    margin-top: 70px;
+}
+
+.resultScoreLine1 img,.resultScoreLine2 img,.resultScoreLine3 img,.resultScoreLine4 img,.resultScoreLine5 img{
     float: right;
     position: relative;
     top: -20px;
-    left: 24px;
+    left: 5px;
     width: 30px;
 }
 
