--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Noto+Sans+KR:wght@100..900&display=swap');
+@import url('https://cdn.jsdelivr.net/npm/pretendard/dist/web/static/pretendard.css');
 
-.nanum-gothic-regular {
-  font-family: "Nanum Gothic", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-} */
+body {
+  font-family: 'Pretendard', sans-serif;
+}
 
 
 a{
