--- a/src/pages/Mypage/Mypage.module.css
+++ b/src/pages/Mypage/Mypage.module.css
@@ -204,6 +204,7 @@
     border-radius: 25px;
     border: 1px solid #84a67f;
     height: 720px;
+    overflow-y: auto;
 }
 
 .MyPost_p{
@@ -226,12 +227,15 @@
 
 /* 작성된 글 */
 .List{
-    height: 100%;
+    height: 96px;
     display: none;
     flex-direction: column;
-    margin : 0;
+    margin-top: -10px;
     padding: 0;
     width: 100%;
+    cursor: pointer;
+    /* margin-left: 0;
+    margin-right: 0; */
 }
 
 /* 작성된 글이 없을 때 */
