--- a/src/pages/Mypage/Mypage.module.css
+++ b/src/pages/Mypage/Mypage.module.css
@@ -196,15 +196,16 @@
 .postList{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    padding: 5px 0 5px 15px;
-    margin : 30px auto 0 120px;
+    padding: 0 0 5px 15px;
+    margin : -20px auto 0 120px;
     width: 1040px;
     border-radius: 25px;
     border: 1px solid #84a67f;
-    height: 720px;
+    height: 540px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .MyPost_p{
@@ -227,15 +228,12 @@
 
 /* 작성된 글 */
 .List{
-    height: 96px;
-    display: none;
+    /* height: 100%; */
+    display: flex;
     flex-direction: column;
-    margin-top: -10px;
+    margin : 0;
     padding: 0;
     width: 100%;
-    cursor: pointer;
-    /* margin-left: 0;
-    margin-right: 0; */
 }
 
 /* 작성된 글이 없을 때 */
