--- a/src/pages/Mypage/Mypage.module.css
+++ b/src/pages/Mypage/Mypage.module.css
@@ -59,6 +59,13 @@
     margin-left: 30px;
 }
 
+.Profile_top02_p3{
+    font-size: 15px;
+    margin: 30px 0 0 30px;
+    color: #ffd000;
+    font-weight: bold;
+}
+
 /* 젤 오른쪽 */
 .Profile_top03{
     display: flex;
@@ -244,6 +251,7 @@
     justify-content: center;
     text-align: center;
     font-weight: bold;
+    margin : auto;
 }
 
 .No_postList_btn{
@@ -286,13 +294,21 @@
     margin-left: 10px;
 }
 
+.inspect{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 880px;
+}
+
 .inspectBut{
     border: none;
     width: 200px;
     height: 40px;
     border-radius: 30px;
     margin-top: 50px;
-    margin-left: 60vh;
+    margin-left: 50vh;
 }
 
 /* =========================================== */
@@ -389,4 +405,90 @@
     border: 1px solid #84A67F;
     overflow-y: auto;
     cursor: pointer;
+}
+
+/* 자가진단 결과부분 */
+.resultContainer{
+    display: flex;
+    flex-direction: column;
+    margin: -130px auto 20px auto ;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.resultContainer2{
+    display: flex;
+    flex-direction: column;
+    margin: -130px 0 20px 0 ;
+    justify-content: center;
+    align-items: center;
+}
+
+.postList00 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 0 5px 15px;
+    margin: auto;
+    border-radius: 25px;
+    border: 1px solid #84a67f;
+    width: 800px;
+    height: 500px;
+  }
+  
+ .inspectBut00{
+    border: none;
+    width: 200px;
+    height: 40px;
+    border-radius: 30px;
+    margin-top: 20px;
+    margin-left: 20vh;
+ }
+
+.ExpertprofileBox{
+    background-color:rgba(255, 208, 0, 0.30000001192092896);
+    height:170px;
+    width:810px;
+    border-radius:30px;
+    margin: 10px 0 10px 80px;
+    padding-bottom: 125px;
+}
+
+.ExpertprofileBoxUnderp{
+    font-size: 18px;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 15px;
+}
+
+.ExpertprofileBoxborder{
+    border:0.5px solid rgba(0, 0, 0, 0.5);
+    width: 810px;
+    height: 0px;
+}
+
+.ExpertprofileBoxUnderp2{
+    font-size: 19.5px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 40px;
+    margin-left: 20px;
+    text-align: center;
+}
+
+.BoxUnder2State{
+    background-color: white;
+    width:105px;
+    height:35px;
+    border-radius: 30px;
+    text-align: center;
+}
+
+.BoxUnder2State p{
+    margin-top: 3px;
 }
