--- a/src/pages/Mypage/Mypage.module.css
+++ b/src/pages/Mypage/Mypage.module.css
@@ -2,7 +2,7 @@
 .Profile_container{
     display: flex;
     flex-direction: column;
-    width: 85%;
+    width: 100%;
     align-items: center;
     justify-content: center;
     margin: 230px auto 80px auto;
@@ -50,11 +50,12 @@
 .Profile_top02_p1{
     font-size: 20px;
     margin: 30px 0 0 30px;
+    font-weight: bold;
 }
 
 .Profile_top02_p2{
     font-size: 12px;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin-top: 10px;
     margin-left: 30px;
 }
@@ -113,7 +114,7 @@
     width:810px;
     border-radius:30px;
     margin: 10px 0 10px 80px;
-    padding: 0 40px;
+    padding: 15px 40px 0  40px;
 }
 
 /* 안에 내용 */
@@ -121,6 +122,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
 }
 
 .Profile_mid_content_p{
@@ -144,18 +146,20 @@
     width:810px;
     border-radius:30px;
     margin: 10px 0 10px 80px;
-    padding: 0 40px;
+    padding: 10px 40px;
 }
 
 .Profile_mid_footer_p{
     font-size: 9px;
     color:#414141;
+    margin-top: 3px;
 }
 
 .Profile_footer_btn{
     background-color:#ffffff;
     border : 1px solid #ffffff;
     border-radius:15px;
+    margin-top: -10px;
 }
 
 /* ===================================================== */
@@ -178,7 +182,16 @@
     flex-direction: row;
     align-items: flex-start;
     justify-content: start;
-    margin-left: 120PX;
+    margin-left: 160px;
+    margin-bottom: 30px;
+}
+
+.MyPost_toptop{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: start;
+    margin-left: 220px;
     margin-bottom: 30px;
 }
 
@@ -447,7 +460,7 @@
     margin-left: 20vh;
  }
 
-.ExpertprofileBox{
+ .ExpertprofileBox{
     background-color:rgba(255, 208, 0, 0.30000001192092896);
     height:170px;
     width:810px;
