--- a/src/pages/selftest/anxiety/Anxiety.module.css
+++ b/src/pages/selftest/anxiety/Anxiety.module.css
@@ -10,14 +10,20 @@
 
   .topTextCusor{
     cursor: pointer;
+    color:#d9d9d9;
+  }
+
+  .topTextCusor1{
+    cursor: pointer;
+    color:#84a67f;
   }
   
   .Arrow {
     display: inline-block;
     width: 5px;
     height: 5px;
-    border-left: 1px solid black;
-    border-bottom: 1px solid black;
+    border-left: 1px solid #d9d9d9;
+    border-bottom: 1px solid #d9d9d9;
     transform: rotate(-135deg);
   }
  
@@ -224,8 +230,8 @@
 
 .nextPage{
     box-sizing: border-box;
-    background-color: rgb(152, 173, 158);
-    width: 300px;
+    background-color:#84a67f;
+    width: 230px;
     height: 43px;
     border-radius: 10px;
     text-align: center;
@@ -283,7 +289,7 @@
     transform: rotate(-135deg);
     position: relative;
     top: 16px;
-    left: -175px;
+    left: -163px;
 }
 
 /* 테스트 결과 박스 */
