--- a/src/components/Fixed.module.css
+++ b/src/components/Fixed.module.css
@@ -16,10 +16,9 @@ header {
 }
 
 .textalign1{
-    position: absolute;
+    padding-top: 40px;
+    padding-left: 210px;
     font-weight: bolder;
-    top: 40px;
-    left: 100px;
     font-size: 30px;
     cursor: pointer;
 }
@@ -29,7 +28,7 @@ header {
     height: 30px;
     position: absolute;
     top: 60px;
-    right: 100px;
+    right: 190px;
     display: flex;
     justify-content: end;
     cursor: pointer;
@@ -58,6 +57,7 @@ header {
     cursor: pointer;
     font-size: 13px;
     margin-top: 5px;
+    margin-left: 110px;
 }
 
 .navTextMargin{
@@ -68,18 +68,21 @@ header {
     list-style: none;
 }
 
+
 footer .inner1 {
     display: flex;
     justify-content: start;
     max-width: var(--layout-max-width);
     width: 100%;
     margin: 0 auto;
-    padding: 10px 60px;
+    padding: 20px 215px;
     color:#84a67f;
     position: absolute;
     bottom: auto;
     border-top: solid 1px gray;
-    margin-top: 50px;
+    margin-top: 90px;
+    font-size: 15px;
+    padding-top: 10px;
 }
 
 footer .inner2{
@@ -88,11 +91,12 @@ footer .inner2{
     max-width: var(--layout-max-width);
     width: 100%;
     margin: 0 auto;
-    padding: 10px 60px;
+    padding: 0px 215px;
     color: #676358;
     position: absolute;
     bottom: auto;
-    margin-top: 80px;
+    margin-top: 130px;
+    font-size: 13px;
 }
 
 footer .inner3{
@@ -101,16 +105,16 @@ footer .inner3{
     max-width: var(--layout-max-width);
     width: 100%;
     margin: 0 auto;
-    padding: 10px 60px;
+    padding: -0px 215px;
     color: #676358;
     position: absolute;
     bottom: auto;
-    margin-top: 115px;
+    margin-top: 160px;
 }
 
 footer .inner3 p{
     margin-right: 20px;
-    font-size: 13px;
+    font-size: 11px;
     cursor: pointer;
 }
 
