--- a/src/pages/Community/Comm.module.css
+++ b/src/pages/Community/Comm.module.css
@@ -127,30 +127,6 @@
     text-align: center;
 }
 
-/* .CommList_right_main{
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    padding: 0 0 0 15px;
-    margin : 20px auto 0 0px;
-    width: 100%;
-    height: 340px;
-    border-radius: 25px;
-    border: 1px solid #84a67f;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.CommList_main{
-    height: 80%;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    margin : 0;
-    padding: 0;
-    width: 100%;
-} */
-
 .CommList_right_main {
     display: flex;
     flex-direction: column;
@@ -170,7 +146,8 @@
     width: 100%;
     padding: 10px 0; 
     margin: 0; 
-    box-sizing: border-box; 
+    box-sizing: border-box;
+    line-height: 35px; 
 }
 
 .CommList_main_bottom{
@@ -311,6 +288,7 @@
     width:750px;
     border-radius:15px;
     border:1px solid #84a67f;
+    padding-left: 80px;
 }
 
 .CommList_left_h22{
