--- a/src/pages/Professional/ProSignup.module.css
+++ b/src/pages/Professional/ProSignup.module.css
@@ -29,6 +29,7 @@
     color:#818181;
     font-size: 10px;
     text-align: left;
+    padding-left: 10px;
 }
 
 .signup_checkbox_p{
@@ -252,7 +253,7 @@
 .signup_input_phone{
     border-radius: 20px;
     border: 1px solid #000000;
-    width: 350px;
+    width: 380px;
     height: 60px;
     padding-left: 30px;
 }
@@ -270,7 +271,7 @@
 .signup_input_phone2{
     border-radius: 20px;
     border: 1px solid #000000;
-    width: 450px;
+    width: 480px;
     height: 60px;
     padding-left: 30px;
     background-color:#f7f7f7;
