--- a/src/pages/Mainpages/Main1.module.css
+++ b/src/pages/Mainpages/Main1.module.css
@@ -1,23 +1,4 @@
-.mainBox {
-    width: 170vh;
-    height: 250px;
-    background-color:#84a67f;
-    border-radius: 20px;
-    margin: 230px auto 0 auto;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    padding: 40px 0;
-}
 
-/* .mainTitleText {
-    font-size: 23px;
-    color: white;
-    margin-left: 50px;
-    padding-top: 30px;
-    font-weight: bold;
-} */
 
 .mainTitleText{
     display: flex;
@@ -32,7 +13,7 @@
     font-size: 23px;
     color: white;
     margin-bottom: 40px;
-    margin-top: -10px;
+    margin-top: 20px;
     /* padding-top: 10px; */
     font-weight: bold;
     text-align: left;
@@ -61,7 +42,7 @@
     justify-content: center;
     width: 50vh;
     margin-right: 200px;
-    margin-bottom: -80px;
+    margin-bottom: -60px;
 }
 
 .오른쪽끄적임{
@@ -82,6 +63,7 @@
     box-sizing: border-box;
     width: 170vh;
     margin : 150px auto 0 auto;
+    padding: auto;
 }
 
 .main2Text {
@@ -113,6 +95,14 @@
     padding-left: 40px;
 }
 
+/* .main3Container {
+    color: black;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 70px;
+    margin-left: -100px;
+} */
+
 .main3Container {
     color: black;
     display: flex;
@@ -128,6 +118,11 @@
     border-radius: 10px;
     cursor: pointer;
     margin-right: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0 0 40px;
 }
 
 .main3Box1Text {
@@ -140,24 +135,28 @@
 
 .main3Box1Section2 {
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 800px;
+    padding: auto;
 }
 
 .main3Box1Section2 img {
-    width: 150px;
-    margin-top: -110px;
+    width: 200px;
+    margin-top: -130px;
+    transform: scaleX(-1);
     margin-left: 100px;
 }
 
 .line {
     content: "";
     width: 50vh;
-    margin-top: 13px;
-    margin-left: 20px;
+    margin-top: 34px;
     background: black;
     height: 0.8px;
     font-size: 0px;
     line-height: 0px;
+    flex-grow: 1;
 }
 
 .Arrow {
@@ -167,44 +166,15 @@
     border-left: 0.5px solid black;
     border-bottom: 0.5px solid black;
     transform: rotate(-135deg);
-    margin-top: 7.5px;
+    margin-top: 2.5px;
     margin-left: -12.5px;
 }
 
-.main3Box2 {
-    background-color:#ffea8f;
-    width: 47vh;
-    height: 170px;
-    border-radius: 10px;
-    cursor: pointer;
-}
-
-.main3Box2Text {
-    font-size: 22px;
-    line-height: 130%;
-    margin-top: 30px;
-    margin-left: 20px;
-}
-
-.main3Box2Text img {
-    width: 150px;
-    margin-top: -50px;
-    margin-left: 50px;
-}
-
-.main2Text2 {
-    display: flex;
-    justify-content: start;
-    font-size: 22px;
-    margin-top: 10px;
-    margin-left: 20px;
-    line-height: 5px;
-}
 
 .line2 {
     content: "";
-    width: 28vh;
-    margin-top: 5px;
+    width: 20vh;
+    margin-top: 17px;
     margin-left: 20px;
     background: black;
     height: 0.3px;
@@ -219,7 +189,7 @@
     border-left: 0.5px solid black;
     border-bottom: 0.5px solid black;
     transform: rotate(-135deg);
-    margin-top: -1px;
+    margin-top: 11px;
     margin-left: -11px;
 }
 
@@ -234,3 +204,154 @@
     margin-left: 325px;
     margin-top: 5px;
 }
+
+/* ============================================================== */
+
+.전체container{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 230px auto -20px auto;
+}
+
+.mainBox {
+    width: 170vh;
+    height: 250px;
+    background-color:#84a67f;
+    border-radius: 20px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 0 0 40px 0;
+}
+
+.오늘끄적임{
+    display: flex;
+    flex-direction: column;
+}
+
+.오늘끄적임22{
+    margin-bottom: -10px;
+}
+
+.바닥부분{
+    width: 170vh;
+    height: 250px;
+    margin: 20px auto 0 auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    padding: 0 0 40px 0;
+}
+
+.유저님의마음을{
+    display: flex;
+    flex-direction: column;
+    font-size: 26px;
+    margin-top: 20px;
+    font-weight: 500;
+    color:#4d4d4d;
+}
+
+.유저님의마음을22{
+    /* margin: 30px 0 0 30px; */
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    /* justify-content: space-between; */
+}
+
+.텍스트와화살표{
+    display: flex;
+    flex-direction: column;
+    /* justify-content: flex-start;
+    align-items: center; */
+    /* padding: auto 0 auto 0; */
+}
+
+.이미지11{
+    width: 180px;
+    height: 180px;
+    transform: scaleX(-1);
+}
+
+.검사바로{
+    color:#4d4d4d;
+    font-size: 8px;
+    text-align: right;
+    margin-top: 6px;
+}
+
+.바로바로22{
+    color:#4d4d4d;
+    font-size: 8px;
+    text-align: right;
+    margin-top: 6px;
+}
+
+.main3Box2 {
+    background-color:#ffea8f;
+    width: 47vh;
+    height: 170px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+
+
+.이미지22{
+    width: 100px;
+    margin-left: 150px;
+
+}
+
+.main2Text2 {
+    display: flex;
+    flex-direction: column;
+    padding-left: 44px;
+    margin-top: -5px;
+    justify-content: center;
+  }
+  
+  .main3Box2Text {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-start;
+    padding-top: 10px;
+    padding-left: 44px;
+  }
+
+.아래쪽{
+    display: flex;
+    flex-direction: row;
+    margin-top: -5px;
+}
+
+/* 화면 너비가 768px 이하일 때 */
+/* @media (max-width: 1770px) {
+    .main3Box2Text {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;
+        justify-content: space-evenly;
+        padding-top: 20px;
+        padding-right: 55px;
+    }
+
+    .끄적임밑{
+        font-size: 40px;
+        color: white;
+        text-align: left;
+        margin-left: 100px;
+        margin-bottom: -10px;
+    }
+  } */
