--- a/src/pages/selftest/Blue/Blue.module.css
+++ b/src/pages/selftest/Blue/Blue.module.css
@@ -470,7 +470,7 @@
 }
 
 .resultButton1{
-    background-color: rgb(93, 109, 98);
+    background-color:#84a67f;
     color: white;
     border-radius: 30px;
     border: none;
